- CHG: URL's are shown unescaped now, at least everywhere
       where they can't be edited. (Stefan)
- CHG: Follow the drive type settings: don't access
       drives which are not used. (Stefan)
- CHG: If there's nothing to commit, a dialog box
       pops up telling that. After that the main
       dialog is also closed so no more pressing
       "OK" or "Cancel" for nothing. (Stefan)
- ADD: The "Browse..." Button in the relocate dialog
       works now. (Stefan)
- ADD: Maximize button on the progress window. (Stefan)
- ADD: The resulting revision number is shown when
       doing commits, copies/tags, ... (Stefan)
- ADD: You can now enter a log message when doing an
       branch/tag. Fixes issue 63. (Stefan)
- ADD: Information about a successful tag in the log
       dialog. (Stefan)

Version 0.16
- BUG: The "open" command in the repository browser
       was always active, even for URL's which 
       can't be opened. (Stefan)
- BUG: Two more dialogs (Updates and Commit) were
       missing the new subversion statuses. (Stefan)
- BUG: The proxy parameters were stored under the wrong
       key in the registry. (Stefan)
- BUG: In Import, if no temporary files were found
       or all deselected then an error message
       was shown. (Stefan)
- BUG: In the log dialog if more than 500 files were
       changed in a revision then it showed "and 0 more"
       instead of the real remaining files. (Stefan)
- CHG: Changed the behaviour of the Log and Updates
       dialog if a network timeout occured. (Stefan)
- CHG: If the option "recursive overlays" is not set
       then the status for folders is always set to
       "normal" to speed things up a little. (Stefan)
- CHG: Added a timeout to the status cache. This
       is a workaround so that refreshing (pressing
       F5) isn't needed that much. (Stefan)
- CHG: Improved the status caching. (Stefan)
- CHG: if only the properties were modified then
       this is indicated by a "(P only)" in