@@ -17,6 +17,7 @@
 // Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #pragma once
+#include "stdafx.h"
 #ifdef _MFC_VER
 #include "PromptDlg.h"
 #endif
