@@ -16,6 +16,8 @@
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
+#include "stdafx.h"
+
 #pragma warning (disable : 4786)
 
 // Initialize GUIDs (should be done only and at-least once per DLL/EXE)
