@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0">
 <assemblyIdentity
-    version="1.0.0.0"
+    version="0.16.0.105"
     processorArchitecture="X86"
-    name="None.TortoiseSVN.TortoiseSVN"
+    name="TortoiseSVN.dll"
     type="win32"
 />
 <description>Subversion integration for the Windows Shell</description>
