@@ -18,6 +18,7 @@
 
 #pragma once
 
+#include "stdafx.h"
 #include <windows.h>
 
 #define random( min, max ) (( rand() % (int)((( max ) + 1 ) - ( min ))) + ( min ))
