@@ -1,9 +1,9 @@
-#define FILEVER_INCVERSION        0,16,0,105
-#define PRODUCTVER_INCVERSION     0,16,0,105
-#define STRFILEVER_INCVERSION     "0, 16, 0, 105\0"
-#define STRPRODUCTVER_INCVERSION  "0, 16, 0, 105\0"
+#define FILEVER_INCVERSION        0,16,0,106
+#define PRODUCTVER_INCVERSION     0,16,0,106
+#define STRFILEVER_INCVERSION     "0, 16, 0, 106\0"
+#define STRPRODUCTVER_INCVERSION  "0, 16, 0, 106\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             16
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  105
+#define TSVN_VERBUILD_INCVERSION  106
 
